Add Sub Category View

--- a/templates/pages/cart.html
+++ b/templates/pages/cart.html
@@ -1,4 +1,6 @@
 {{#partial "page"}}
+{{inject 'mycart' cart.items}}
+{{inject 'mycustomer' customer}}
 <div class="page">
 
     <main class="page-content" data-cart>
