--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -88,3 +88,38 @@
         {{/if}}
     </div>
 </footer>
+<script>
+    //console.log("in footer");
+
+    if(window.analytics == null){
+      //console.log('init');
+      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
+      
+        analytics.load("8RrZZr0glvYMyA1IBQDSwoLZBdJFzCKS");
+        //console.log('after load');
+        }}();
+    }
+
+    var customer = {};
+      customer.id = '{{customer.id}}';
+      customer.email = '{{customer.email}}';
+      customer.name = '{{customer.name}}';
+      customer.phone = '{{customer.phone}}';
+      customer.group_id = '{{customer.customer_group_id}}';
+      customer.group_name = '{{customer.customer_group_name}}';
+    //console.log(customer); 
+    if(customer.id) {
+        window.analytics.identify(customer.id, {
+          name: customer.name,
+          email: customer.email,
+          phone: customer.phone
+        });
+        window.analytics.group(customer.group_id, {
+          name: customer.group_name
+        });
+    } 
+
+    window.analytics.page();  
+                                                                                                                       
+</script>
+
