--- a/templates/components/products/list-item.html
+++ b/templates/components/products/list-item.html
@@ -1,6 +1,8 @@
 <article class="listItem">
     <figure class="listItem-figure">
-        <img class="listItem-image" src="{{getImage image 'productgallery_size' (cdn theme_settings.default_image_product)}}" alt="{{image.alt}}" title="{{image.alt}}">
+        <a href="{{url}}">
+            <img class="listItem-image" src="{{getImage image 'productgallery_size' (cdn theme_settings.default_image_product)}}" alt="{{image.alt}}" title="{{image.alt}}">
+        </a>
     </figure>
     <div class="listItem-body">
         <div class="listItem-content">
@@ -17,11 +19,28 @@
                 {{#if summary}}
                     <p>{{{summary}}}</p>
                 {{/if}}
+                <!--
+                <p class="listItem-brand">
+                    HDMI Input
+                </p>
+                <p class="listItem-brand">
+                    Rear Camera
+                </p>
+                <p class="listItem-brand">
+                    Front Camera
+                </p>
+                <p class="listItem-brand">
+                    Lane Watch Camera
+                </p>
+                -->
             </div>
             <div class="listItem-actions">
                 {{#if price}}
                     <div class="listItem-price">{{> components/products/price price=price}}</div>
                 {{/if}}
+                {{#unless customer}}
+                    {{> components/common/register-user-pricing}}
+                {{/unless}}
                 {{#unless hide_add_to_cart}}
                     {{#if has_options}}
                         <a href="{{url}}" class="button button--primary" data-product-id="{{id}}">{{lang "products.choose_options"}}</a>
@@ -29,7 +48,7 @@
                         {{#if out_of_stock_message }}
                         <span href="{{url}}" class="button button--primary">{{out_of_stock_message}}</span>
                         {{else}}
-                        <a href="{{add_to_cart_url}}" class="button button--primary">{{lang "products.add_to_cart"}}</a>
+                        <a href="{{url}}" class="button button--primary">{{lang "products.view_more"}}</a>
                         {{/if}}
                     {{/if}}
                 {{/unless}}
