--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -24,15 +24,16 @@ category:
 {{{category.description}}}
 {{{snippet 'categories'}}}
 <div class="page">
+    <!--
     <aside class="page-sidebar" id="faceted-search-container">
         {{> components/category/sidebar}}
     </aside>
-
+    -->
     <main class="page-content" id="product-listing-container">
         {{#if category.products}}
             {{> components/category/product-listing}}
         {{else}}
-            <p>{{lang 'categories.no_products'}}</p>
+            {{> components/category/sub-category-listing}}
         {{/if}}
     </main>
 </div>
