--- a/templates/components/products/tabs.html
+++ b/templates/components/products/tabs.html
@@ -9,6 +9,9 @@
             <a class="tab-title" href="#tab-similar" role="tab" tabindex="0" aria-selected="false" controls="tab-similar">{{lang 'products.similar_by_views'}}</a>
         </li>
     {{/if}}
+    <li class="tab{{#unless product.related_products}} is-active{{/unless}}" role="presentational">
+            <a class="tab-title" href="#tab-alternative" role="tab" tabindex="0" aria-selected="false" controls="tab-alternative">Alternative Products for Your Car</a>
+    </li>
 </ul>
 
 <div class="tabs-contents">
@@ -23,4 +26,8 @@
         {{> components/products/carousel products=product.similar_by_views columns=6}}
     </div>
 {{/if}}
+
+    <div role="tabpanel" aria-hidden="true" class="tab-content has-jsContent{{#unless product.related_products}} is-active{{/unless}}" id="tab-alternative">
+        Finding Alternative Products...
+    </div>
 </div>
