--- a/templates/components/products/options/product-list.html
+++ b/templates/components/products/options/product-list.html
@@ -1,24 +1,35 @@
-<div class="form-field" data-product-attribute="product-list">
-    <label class="form-label form-label--alternate form-label--inlineSmall">
-        {{display_name}}:
-        <span data-option-value></span>
+<script type="text/javascript">
+//console.log(({{values.length}}));
+function removeOption(id){
+    console.log("id: ", id);
+    document.getElementById(`attribute_0_${id}`).click();
+}
+</script>
 
-        {{#if required}}
-            <small>{{lang 'common.required'}}</small>
-        {{/if}}
-    </label>
+<div class="form-field" data-product-attribute="product-list" data-step-name="{{display_name}}">
+    <div style="display: none;">
+        <label class="form-label form-label--alternate form-label--inlineSmall">
+            {{display_name}}:
+            <span data-option-value></span>
 
+            {{#if required}}
+                <small>{{lang 'common.required'}}</small>
+            {{/if}}
+        </label>
+    </div>
     {{#if values.0.image}}
         <ul class="productOptions-list">
             {{#unless required}}
                 <li class="productOptions-list-item">
-                    <input class="form-radio"
-                           type="radio"
-                           name="attribute[{{id}}]"
-                           value="0"
-                           id="attribute_0_{{id}}"
-                           {{#if defaultValue '==' 0}}checked{{/if}} required>
-                    <label class="form-label" for="attribute_0_{{id}}">{{lang 'products.none'}}</label>
+                    <div style="display: none;">
+                        <input class="form-radio"
+                               type="radio"
+                               name="attribute[{{id}}]"
+                               value="0"
+                               id="attribute_0_{{id}}"
+                               {{#if defaultValue '==' 0}}checked{{/if}} required>
+                        <label class="form-label" for="attribute_0_{{id}}">{{lang 'products.none'}}</label>
+                    </div>
                 </li>
             {{/unless}}
             {{#each values}}
@@ -37,20 +48,27 @@
                             id="attribute_{{id}}"
                             {{#if selected}}checked{{/if}}
                             {{#if ../required}}required{{/if}}>
-                        <label data-product-attribute-value="{{id}}" class="form-label" for="attribute_{{id}}">{{label}}</label>
+                            <label data-product-attribute-value="{{id}}" class="form-label" for="attribute_{{id}}">{{label}}
+                                <span id="price_{{data}}"></span>
+                            </label>
+                            <a href="#" class="button" onclick="removeOption({{../id}})">Remove</a>
+                            <input type="button" value="Show Details" id="btn_option_details_{{data}}" class="button button--primary">
                     </div>
+                    <div class="productView-options" style="font-size: 14px;"  id="option_details_{{data}}"></div>
                 </li>
             {{/each}}
         </ul>
     {{else}}
         {{#unless required}}
-        <input class="form-radio"
-               type="radio"
-               name="attribute[{{id}}]"
-               value="0"
-               id="attribute_0_{{id}}"
-               {{#if defaultValue '==' 0}}checked{{/if}}>
-        <label class="form-label" for="attribute_0_{{id}}">{{lang 'products.none'}}</label>
+        <div style="display: none;">
+            <input class="form-radio"
+                   type="radio"
+                   name="attribute[{{id}}]"
+                   value="0"
+                   id="attribute_0_{{id}}"
+                   {{#if defaultValue '==' 0}}checked{{/if}}>
+            <label class="form-label" for="attribute_0_{{id}}">{{lang 'products.none'}}</label>
+        </div>
         {{/unless}}
         {{#each values}}
             <input
@@ -61,7 +79,13 @@
                 id="attribute_{{id}}"
                 {{#if selected}}checked{{/if}}
                 {{#if ../required}}required{{/if}}>
-            <label data-product-attribute-value="{{id}}" class="form-label" for="attribute_{{id}}">{{label}}</label>
+                <label data-product-attribute-value="{{id}}" class="form-label" for="attribute_{{id}}">
+                    {{label}}
+                    <span id="price_{{data}}"></span>
+                </label>
+                <a href="#" class="button" onclick="removeOption({{../id}})">Remove</a>
+                <input type="button" value="Show Details" id="btn_option_details_{{data}}" class="button button--primary">
+                 <div class="productView-options" style="font-size: 14px;" id="option_details_{{data}}"></div>
         {{/each}}
     {{/if}}
 </div>
