--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -10,7 +10,11 @@ carousel: {{theme_settings.homepage_show_carousel}}
 blog:
     recent_posts:
         limit: {{theme_settings.homepage_blog_posts_count}}
+categories: 
+    description: true
 ---
+{{inject 'categoriesTree' categories}}
+
 {{#partial "hero"}}
     {{#if carousel}}
         {{> components/carousel}}
