--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -17,7 +17,7 @@ product:
     {{/each}}
 
     <div itemscope itemtype="http://schema.org/Product">
-        {{> components/products/product-view schema=true}}
+        {{> components/products/product-view schema=true breadcrumbs=breadcrumbs}}
 
         {{#if product.videos.list.length}}
             {{> components/products/videos product.videos}}
