Commit before 1.9.2 merge

--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -193,6 +193,7 @@
                     {{#each product.customizations}}
                         {{{dynamicComponent 'components/products/customizations'}}}
                     {{/each}}
+                <div id="optionTop"></div>
                 <div data-product-option-change style="display:none;">
                     <ul id='step-breadcrumb' class="clearfix" style="display:none;">
                     </ul>
