--- a/templates/components/cart/content.html
+++ b/templates/components/cart/content.html
@@ -44,7 +44,7 @@
                     {{#if options}}
                         <dl class="definitionList">
                             {{#each options}}
-                                <dt class="definitionList-key">{{name}}:</dt>
+                                <dt class="definitionList-key">{{name}}:YYY</dt>
                                 <dd class="definitionList-value">
                                     {{#if is_file}}
                                         <a href="/viewfile.php?attributeId={{../id}}&cartitem={{../../id}}">{{{value}}}</a>
