--- a/templates/pages/order-confirmation.html
+++ b/templates/pages/order-confirmation.html
@@ -27,6 +27,11 @@
 
 {{{ checkout.order_confirmation_content }}}
 
+<script>
+    console.log('order_confirmation_content');
+</script>
+
+
 {{/partial}}
 
 {{> layout/empty}}
