-- Product Detail page bulkorder-content style done

--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -72,6 +72,9 @@
 @import "../../node_modules/@bigcommerce/citadel/dist/components/components"; // 2
 @import "components/components"; // 3
 
+@import "font-awesome";
+
+
 
 // Layouts
 // -----------------------------------------------------------------------------
