--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -53,7 +53,8 @@
           border-radius: 50%;
           padding: 0;
           height: 32px;
-          width: 32px;          
+          width: 32px;
+          margin-bottom: 0;
           &:before{
             content: 'x';
             position: absolute;
@@ -78,7 +79,7 @@
         }
       }
   }
-  
+
  .accordianblock {
     display: inline-block;
      .plus-icon,.minus-icon {
@@ -88,4 +89,90 @@
         padding: 0 10px;
         cursor:pointer;
     }
+}
+
+
+// 12-9-2017 product detail style
+
+.bulkorder-content {
+  .form-field{
+    margin-bottom: 20px;
+    .productView-options{
+      margin-bottom: 0;
+    }
+    a.button{
+      float: right;
+      top: -3px;
+      height: 22px;
+      width: 22px;
+      &:before{
+        width: 22px;
+        height: 22px;
+        line-height: 19px;
+        font-size: 13px;
+      }
+    }
+  }
+}
+
+.bulkorder-content {
+  .form-field{
+    .show_hide_btn{
+      a{
+        font-size: 14px;
+        border: none;
+        height: auto;
+        width: auto;
+        float: right;
+        margin-right: 40px;
+        top: 0;
+        &:after{
+          content: "\f107";
+          position: absolute;
+          right: -20px;
+          top: 0;
+          font-family: FontAwesome;
+          font-size: 18px;
+        }
+        &:before{
+          display: none;
+        }
+      }
+      &.open-details{
+        a{
+          &:after{
+            content: "\f106";
+          }
+        }
+      }
+    }
+  }
+}
+#review-step{
+  clear: both;
+  #selected-options-list{
+    li{
+      margin-bottom: 5px;
+    }
+  }
+  .form-field--increments{
+    margin-bottom: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 30px;
+  }
+  .form-action{
+    margin-top: 0;
+    .button{
+      margin: 0;
+    }
+  }
+}
+#option-prev{
+  margin-bottom: 10px;
+}
+.productView-options {
+  .form-action{
+    display: inline;
+  }
 }
