-- product detail page productView-images style changes

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -176,3 +176,10 @@
     display: inline;
   }
 }
+.bulkorder-content {
+  .form-field{
+    .productView-images{
+      clear: left;
+    }
+  }
+}
