test bloc insert

--- a/templates/components/products/_nt-product-price-json.html
+++ b/templates/components/products/_nt-product-price-json.html
@@ -3,7 +3,8 @@ product:
    price:
    custom_fields:
 ---
-{{json product}}
+{&quot;price&quot;:{{json product.price}}, &quot;custom_fields&quot;: {{json product.custom_fields}} }
+
 
 
 
